[package]
name = "cache-rpc"
version = "0.1.15"
authors = ["Alexander Polakov <a.polakov@iconic.vc>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix = "0.12"
actix-codec = "0.4"
#actix-cors = "0.6.0-beta.1"
# updated for latest actix-web beta
actix-cors = { git = "https://github.com/actix/actix-extras/", rev = "44c7b07" }
awc = { version = "3.0.0-beta.7", features = ["openssl"] }
tokio = { version = "1.0", features = ["sync", "time", "macros"] }
tokio-stream = "0.1.6"
tokio-util = { version = "0.6", features = ["time"] }
bytes = "1.0"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
bs58 = "0.4"
dashmap = "4"
futures-util = "0.3"
stream_generator = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["json", "chrono"] }
tracing-appender = { version = "0.1" }
tracing-futures = "0.2"
structopt = "0.3"
base64 = "0.13"
zstd = "0.8"
smallvec = { version = "1.6", features = ["serde", "union"] }
thiserror = "1.0"
prometheus = { version = "0.12", default-features = false, features = ["process"] }
once_cell = "1.7"
lru = "0.6"
signal-hook = "0.1.11"
file-reopen = { git = "https://github.com/polachok/file-reopen.git", rev = "da89261" }
either = "1.6"
backoff = "0.3"
